--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>Sorin's First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
-</html>
+    <head>
+        <title>Page Title</title>
+    </head>
+    <body>
+        <h1>Sorin's First Heading</h1>
+        <p>My first paragraph.
+        </p>
+    </body>
+</html> 
