--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="main.css" />
         <title>Page Title</title>
     </head>
     <body>
@@ -9,3 +10,4 @@
         </p>
     </body>
 </html> 
+ 
