--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css" />
-        <title>Page Title</title>
+        <script src"main.js"></script> 
+        <title>Hello world Page</title>
     </head>
     <body>
-        <h1>Sorin's First Heading</h1>
+        <h1>Hello world!</h1>
         <p>My first paragraph.
         </p>
     </body>
