Adding a second page and linx to it

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Hello world!</h1>
         <p>My first paragraph.
         </p>
+        <a href="file:///C:/tema-curs/home.html">To the home page!</a>
     </body>
 </html> 
  
