--- a/Braila.html
+++ b/Braila.html
@@ -12,6 +12,6 @@
         <p>Despre Braila.
         </p>
         <a href="file:///C:/tema-curs/Despre%20Braila.html">Despre Braila!</a>
-        <img src="C:\tema-curs" alt="Braila" style="width:300px;height:300px;">
+        <img src="C:\tema-curs/imagine_braila.jpg" alt="Braila" style="width:400px;height:400px;">
     </body>
 </html> 
